[gd_scene load_steps=4 format=3 uid="uid://bmhvmiqrv2qs8"]

[ext_resource type="Script" uid="uid://dvjlsckwii3qe" path="res://ui/components/BuildingInfoHUD.gd" id="1_ht0l1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1bat"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ht0l1"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.2, 0.8, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[node name="BuildingInfoHUD" type="Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ht0l1")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Background/MarginContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_right = 4.0
offset_bottom = 31.0
theme_override_styles/background = SubResource("StyleBoxFlat_g1bat")
theme_override_styles/fill = SubResource("StyleBoxFlat_ht0l1")
show_percentage = false

[node name="StatusIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
